# ChangeLog for dev-python/quixote
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/quixote/ChangeLog,v 1.9 2004/06/25 01:48:48 agriffis Exp $

*quixote-0.7_alpha3 (05 Dec 2003)

  05 Dec 2003; Grant Goodyear <g2boojum@gentoo.org> quixote-0.7_alpha3.ebuild:
  New version

*quixote-0.7_alpha2 (12 Nov 2003)

  12 Nov 2003; Grant Goodyear <g2boojum@gentoo.org> quixote-0.7_alpha2.ebuild:
  New version (still the dev branch).  Being bad, I somehow forgot
  to update the changelog for marking 0.6.1 as x86 as well as adding
  0.7_alpha1 (and marking it ~x86), as it's part of quixote's development
  branch.  

*quixote-0.7_alpha1 (23 Oct 2003)

*quixote-0.6.1 (11 Aug 2003)

  11 Aug 2003; Grant Goodyear <g2boojum@gentoo.org> quixote-0.6.1.ebuild:
  Version bump; marking ~x86 for now.

*quixote-0.6 (02 May 2003)

  02 May 2003; Grant Goodyear <g2boojum@gentoo.org> quixote-0.6.ebuild,
  quixote-0.6_beta2.ebuild, quixote-0.6_beta2.ebuild,
  quixote-0.6_beta6.ebuild, quixote-0.6_beta6.ebuild:
  New version.  Removed old betas.

*quixote-0.6_beta2 (21 Apr 2003)

  21 Apr 2003; Grant Goodyear <g2boojum@gentoo.org> quixote-0.5.1.ebuild,
  quixote-0.6_beta2.ebuild, quixote-0.6_beta6.ebuild:
  New python web framework. Marked stable for 0.5.1 because I've used it.
  Leaving the beta's marked unstable, since they're still beta.
  That said, I highly recommend that all users who want to use quixote
  use the latest beta, as there have been some significant changes.
  (If it's good enough for LWN, it's good enough for me.)

*quixote-0.5.1 (22 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.
