@@ -1,12 +1,15 @@
 MD5 36a49e3c0e58e9842567abe42af2cdd7 quixote-0.7_alpha2.ebuild 817
+MD5 d7559d069a1642563f7cb9e0e5533a00 .quixote-1.0.ebuild.swp 12288
 MD5 afa934ed3a3f82164c14b887be8d4d40 quixote-0.5.1.ebuild 788
 MD5 61e3f39e9403694e602bfe9bf7d10d66 quixote-0.7_alpha1.ebuild 819
+MD5 7bf52978b30135aece2216b69c93de24 quixote-1.0.ebuild 817
 MD5 5699ba209319380e5ffe8228c01b098e quixote-0.6.1.ebuild 788
 MD5 7bf52978b30135aece2216b69c93de24 quixote-0.7_alpha3.ebuild 817
 MD5 29ce6841304e28c26b2cc5b3a80a1b83 ChangeLog 1712
 MD5 a2cfe785f6ad94c61071fa71dbe89aeb metadata.xml 244
 MD5 7f7111a26c8b2ca9d529a92774bf2a02 quixote-0.6.ebuild 786
 MD5 175e497da620b92648516645ffcbeb10 files/digest-quixote-0.6 63
+MD5 d0fe64af7a033c96a95874b7c81439a9 files/digest-quixote-1.0 63
 MD5 b93be01baa0719f7833f7b8a24395bef files/digest-quixote-0.5.1 65
 MD5 f0b85ab0bd5e039d101c49571e31286f files/digest-quixote-0.6.1 65
 MD5 adaf8209e35f7fc9ee6a585b57eba42f files/digest-quixote-0.7_alpha1 65
