@@ -1,1 +1,0 @@
-MD5 1d3070f1ff86487ba038f76a089908a0 Quixote-0.5.1.tar.gz 158768
