@@ -1,1 +1,0 @@
-MD5 5eb4caaac412f0aa3b97d12f172ee0dd Quixote-0.7a2.tar.gz 157998
