@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/quixote
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/quixote/ChangeLog,v 1.9 2004/06/25 01:48:48 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/quixote/ChangeLog,v 1.10 2004/07/02 20:15:04 g2boojum Exp $
+
+*quixote-1.0 (02 Jul 2004)
+
+  02 Jul 2004; Grant Goodyear <g2boojum@gentoo.org> +quixote-1.0.ebuild:
+  Version bump
 
 *quixote-0.7_alpha3 (05 Dec 2003)
 
